--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -1,15 +1,18 @@
 {% extends 'auth/base.html' %} {% block content %}
 <div class="container">
-    <div class="container bg-white p-4 rounded shadow" style="max-width: 400px; text-align: center;">
-        <h1 class="mb-4"><span class="fw-bold"style="color: blueviolet;">StyleSync</span></h1>
+    <div class="container bg-white p-4 rounded shadow" style="max-width: 400px; text-align: center">
+        <h1 class="mb-4"><span class="fw-bold" style="color: blueviolet">StyleSync</span></h1>
         <form action="/auth/register" method="POST">
-            <input type="text" name="name" class="form-control mb-3" placeholder="Name" required>
-            <input type="email" name="email" class="form-control mb-3" placeholder="Email" required>
-            <input type="password" name="password" class="form-control mb-3" placeholder="Password" required>
-            <button type="submit" class="btn btn-block" style="background-color: blueviolet; color: white;">Register</button>
+            {% with messages = get_flashed_messages() %} {% if messages %}
+            <div class="notification is-danger">{{ messages[0] }}</div>
+            {% endif %} {% endwith %}
+            <input type="text" name="name" class="form-control mb-3" placeholder="Name" required />
+            <input type="email" name="email" class="form-control mb-3" placeholder="Email" required />
+            <input type="password" name="password" class="form-control mb-3" placeholder="Password" required />
+            <button type="submit" class="btn btn-block" style="background-color: blueviolet; color: white">Register</button>
         </form>
         <div class="footer mt-4">
-            <p class="mb-0">Already have an account? <a href="/" style="color: blueviolet;">Login</a></p>
+            <p class="mb-0">Already have an account? <a href="/" style="color: blueviolet">Login</a></p>
         </div>
     </div>
     {% endblock %}
