--- a/bg_removal_MATILDA/static/uploadcss.css
+++ b/bg_removal_MATILDA/static/uploadcss.css
@@ -1,9 +1,12 @@
-.area {
-    width: 100%;
-    height: 100%;
+
+
+
+    .area {
+    width: 50%;
+    height: 50%;
     position: absolute;
     border: 4px dashed #000;
-    /* background-image: url("https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/upload-512.png"); */
+    background-image: url("{{ url_for('static', filename='uploadbutton.png') }}");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 64px 64px;
@@ -45,4 +48,4 @@
 
 .area.uploading {
     background: none;
-}    
+}
