response message shown on html

--- a/bg_removal_MATILDA/templates/uploadtest.html
+++ b/bg_removal_MATILDA/templates/uploadtest.html
@@ -16,6 +16,8 @@
     <div class="area">
         <input type="file" id="upload" />
     </div>
+    <div id="uploadmessage">
+    </div>
 
     <script src="{{ url_for('static', filename='uploadscript.js') }}"></script>
 </body>
