--- a/bg_removal_MATILDA/static/uploadcss.css
+++ b/bg_removal_MATILDA/static/uploadcss.css
@@ -6,7 +6,6 @@
     height: 500px;
     position: absolute;
     border: 4px dashed #000;
-    /* background-image: url("{{ url_for('static', filename='uploadbutton.png') }}"); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: 75% 75%;
@@ -14,9 +13,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     filter: alpha(opacity=50);
-    -khtml-opacity: 1;
-    -moz-opacity: 1;
-    opacity: 1;
+    opacity: .9;
     text-align: center;
 }
 
@@ -41,11 +38,15 @@
 .area.dragging,
 .area.uploading {
     filter: alpha(opacity=100);
-    -khtml-opacity: 1;
-    -moz-opacity: 1;
     opacity: 1;
 }
 
 .area.uploading {
     background: none;
+}
+
+#uploadmessage {
+    font-size: large;
+    display:block;
+    text-align: center;
 }
