--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>StyleSync</title>
+    <title>StyleSynckk</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
