adjust html pages

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -16,9 +16,9 @@
     />
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
   </head>
-  <body class="me-auto">
+  <body class="container-fluid" style="max-width:100vw; overflow-x: hidden;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('html.homepage')}}">StyleSync</a>
