--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -2,6 +2,7 @@
 {% block content %}
 <body>
       <script src="/code/Static/script.js"></script>
+      <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
       <script src="{{ url_for('static', filename='/script.js') }}"></script>
       <div class="grid-container">
         <div class="logo">
