add image upload

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -30,6 +30,7 @@
             <a class="nav-link active" aria-current="page" href="{{url_for('html.home')}}">My Outfits</a>
             <a class="nav-link" href="{{url_for('html.newoutfit')}}">New Outfit</a>
             <a class="nav-link" href="{{url_for('html.wardrobe')}}">Wardrobe</a>
+            <a class="nav-link" href ="{{url_for('html.new_item')}}">New Item</a>
             <div class="dropstart">
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-person-circle"></i>
