--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -16,7 +16,11 @@
     />
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <style>
+      .nav-link.active {
+          --bs-navbar-active-color: purple;
+      }
+    </style>
   </head>
   <body class="container-fluid" style="max-width:100vw; overflow-x: hidden;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -27,12 +31,12 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link {% if request.endpoint == 'html.home' %} active {% else %} {% endif %}" aria-current="page" href="{{url_for('html.home')}}">My Outfits</a>
-            <a class="nav-link {% if request.endpoint == 'html.newoutfit' %} active {% else %} {% endif %}" href="{{url_for('html.newoutfit')}}">New Outfit</a>
+            <a class="nav-link {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}" aria-current="page" href="{{url_for('html.home')}}">My Outfits</a>
+            <a class="nav-link {% if request.endpoint == 'html.newoutfit' %} active bs-purple {% else %} {% endif %}" href="{{url_for('html.newoutfit')}}">New Outfit</a>
             <a class="nav-link {% if request.endpoint == 'html.wardrobe' %} active {% else %} {% endif %}" href="{{url_for('html.wardrobe')}}">Wardrobe</a>
             <a class="nav-link {% if request.endpoint == 'html.new_item' %} active {% else %} {% endif %}" href ="{{url_for('html.new_item')}}">New Item</a>
             <div class="dropstart">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-person-circle"></i>
               </a>
             
