--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -15,54 +15,122 @@
       crossorigin="anonymous"
     />
     <!-- Bootstrap Icons CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <style>
       .nav-link.active {
-          --bs-navbar-active-color: purple;
+        --bs-navbar-active-color: purple;
       }
     </style>
   </head>
-  <body class="container-fluid" style="max-width:100vw; overflow-x: hidden;">
+  <body class="container-fluid" style="max-width: 100vw; overflow-x: hidden">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('html.homepage')}}">StyleSync</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="{{url_for('html.homepage')}}"
+          >StyleSync</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavAltMarkup"
+        >
           <div class="navbar-nav">
-            <a class="nav-link {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}" aria-current="page" href="{{url_for('html.home')}}">My Outfits</a>
-            <a class="nav-link {% if request.endpoint == 'html.newoutfit' %} active bs-purple {% else %} {% endif %}" href="{{url_for('html.newoutfit')}}">New Outfit</a>
-            <a class="nav-link {% if request.endpoint == 'html.wardrobe' %} active {% else %} {% endif %}" href="{{url_for('html.wardrobe')}}">Wardrobe</a>
-            <a class="nav-link {% if request.endpoint == 'html.new_item' %} active {% else %} {% endif %}" href ="{{url_for('html.new_item')}}">New Item</a>
+            <a
+              class="nav-link {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}"
+              aria-current="page"
+              href="{{url_for('html.home')}}"
+              >My Outfits</a
+            >
+            <a
+              class="nav-link {% if request.endpoint == 'html.newoutfit' %} active bs-purple {% else %} {% endif %}"
+              href="{{url_for('html.newoutfit')}}"
+              >New Outfit</a
+            >
+            <a
+              class="nav-link {% if request.endpoint == 'html.wardrobe' %} active {% else %} {% endif %}"
+              href="{{url_for('html.wardrobe')}}"
+              >Wardrobe</a
+            >
+            <a
+              class="nav-link {% if request.endpoint == 'html.new_item' %} active {% else %} {% endif %}"
+              href="{{url_for('html.new_item')}}"
+              >New Item</a
+            >
             <div class="dropstart">
-              <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              <a
+                class="btn btn-secondary"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
                 <i class="bi bi-person-circle"></i>
               </a>
-            
+
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuicon">
-                <li><a class="dropdown-item" href="#"> <i class="bi bi-person"></i> My Profile</a></li>
-                <li><a class="dropdown-item" href="#"> <i class="bi bi-gear-fill"></i> Settings</a></li>
-                <li>{% if current_user.is_authenticated %}
-                <a class="dropdown-item" href="{{url_for('authorization.logout')}}"> <i class="bi bi-box-arrow-right"></i> Logout</a>
-                {% else %}
-                <a class="nav-link" href="{{url_for('authorization.home')}}">Login</a>
-                <a class="nav-link" href="{{url_for('authorization.register')}}">Register</a>
-                {% endif %}</li>  
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <i class="bi bi-person"></i> My Profile</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <i class="bi bi-gear-fill"></i> Settings</a
+                  >
+                </li>
+                <li>
+                  {% if current_user.is_authenticated %}
+                  <a
+                    class="dropdown-item"
+                    href="{{url_for('authorization.logout')}}"
+                  >
+                    <i class="bi bi-box-arrow-right"></i> Logout</a
+                  >
+                  {% else %}
+                  <a class="nav-link" href="{{url_for('authorization.home')}}"
+                    >Login</a
+                  >
+                  <a
+                    class="nav-link"
+                    href="{{url_for('authorization.register')}}"
+                    >Register</a
+                  >
+                  {% endif %}
+                </li>
               </ul>
             </div>
           </div>
         </div>
       </div>
     </nav>
-
-    {% block content %} {% endblock %}
-
+    {% with messages =
+      get_flashed_messages(with_categories=true) %} {% if messages %} {% include
+      '/html/toast.html' %} {% endif %} {% endwith %}
+    {% block content %} {% endblock %} 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(".toast").toast("show");
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.5"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
