added about route and styles to css

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -16,6 +16,7 @@
     />
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   </head>
   <body class="container-fluid" style="max-width:100vw; overflow-x: hidden;">
