--- a/templates/html/new.html
+++ b/templates/html/new.html
@@ -14,6 +14,7 @@
 </head>
     <div class="area">
         <input type="file" id="upload" />
+        <label for="upload">Upload</label>
     </div>
     <div id="uploadmessage">
     </div>
