added footer to home/outfit/html page with links to contact/about

--- a/templates/html/about.html
+++ b/templates/html/about.html
@@ -30,7 +30,7 @@
     </main>
     <footer class="aboutfooter">
         <ul>
-            <li><a href="#">Donate</a></li>
+            <!-- <li><a href="#">Donate</a></li> -->
             <li><a href="mailto:style@sync.com">Contact</a></li>
             <li><a href="{{url_for('html.about')}}">About</a></li>
         </ul>
