--- a/templates/html/newoutfit.html
+++ b/templates/html/newoutfit.html
@@ -1,6 +1,33 @@
 {% extends '/html/base.html' %}
 
 {% block content %}
+<head>
+    <style>
+        .aboutfooter {
+            text-align: center;
+            padding: 10px 20px;
+            background-color: white;
+            border-top: 1px solid #ddd;
+        }
+
+        .aboutfooter ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        .aboutfooter ul li {
+            margin: 0 10px;
+        }
+
+        .aboutfooter ul li a {
+            text-decoration: none;
+            color: #5a2ea6;
+        }
+    </style>
+</head>
 <div class="container-fluid">
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 ">
@@ -202,4 +229,11 @@
         </div>
     </div>
 </div>
+<footer class="aboutfooter">
+    <ul>
+        <!-- <li><a href="#">Donate</a></li> -->
+        <li><a href="mailto:style@sync.com">Contact</a></li>
+        <li><a href="{{url_for('html.about')}}">About</a></li>
+    </ul>
+  </footer>
 {% endblock %}
