--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -21,17 +21,26 @@
     />
     <style>
       .nav-link.active {
-        --bs-navbar-active-color: purple;
+        --bs-navbar-active-color: #FF76CE;
       }
-
+      .container-fluid{
+        --bs-gutter-x : 0;
+      }
+      .navbar-expand-lg{
+        background-color: #41B06E;
+      }
+      .nav-link {
+        font-family: 'Pacifico', cursive;
+        font-size: large;
+      }
     </style>
     
 
   </head>
   <body class="container-fluid" style="max-width: 100vw; overflow-x: hidden">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('html.home')}}">StyleSync</a>
+        <a class="navbar-brand px-3" href="{{url_for('html.home')}}">StyleSync</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +48,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNavAltMarkup"
         >
-          <div class="navbar-nav">
+          <div class="navbar-nav px-3">
             <a
               class="nav-link {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}"
               aria-current="page"
@@ -74,10 +83,10 @@
               </a>
 
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuicon">
-                <li><a class="dropdown-item" href="{{url_for('html.profile')}}"> <i class="bi bi-person"></i> My Profile</a></li>
+                <li><a class="dropdown-item" href="{{url_for('html.profile')}}"> <i class="bi bi-person"></i>My Profile</a></li>
                 <!-- <li><a class="dropdown-item" href="#"> <i class="bi bi-gear-fill"></i> Settings</a></li> -->
                 <li>{% if current_user.is_authenticated %}
-                <a class="dropdown-item" href="{{url_for('authorization.logout')}}"> <i class="bi bi-box-arrow-right"></i> Logout</a>
+                <a class="dropdown-item" href="{{url_for('authorization.logout')}}"> <i class="bi bi-box-arrow-right"></i>Logout</a>
                 {% else %}
                 <a class="nav-link" href="{{url_for('authorization.home')}}">Login</a>
                 <a class="nav-link" href="{{url_for('authorization.register')}}">Register</a>
