--- a/templates/html/about.html
+++ b/templates/html/about.html
@@ -29,10 +29,10 @@
         </section>
     </main>
     <footer class="aboutfooter">
-        <ul>
+        <ul class="flex justify-center m-0 p-0">
             <!-- <li><a href="#">Donate</a></li> -->
-            <li><a href="mailto:style@sync.com">Contact</a></li>
-            <li><a href="{{url_for('html.about')}}">About</a></li>
+            <li class="mt-0 mr-2"><a href="mailto:style@sync.com">Contact</a></li>
+            <li><a href="{{url_for('html.about')}}" class="text-[#5a2ea6]">About</a></li>
         </ul>
     </footer>
 {% endblock %} 
