--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -15,7 +15,7 @@
         <button type="submit" class="btn btn-block"style="background-color: blueviolet; color: white;">Login</button>
     </form>
     <div class="footer mt-4">
-        <p class="mb-0">Don't have an account? <a href="/auth/register" style="color: blueviolet;">Sign Up</a></p>
+        <p class="mb-0">Don't have an account? <a href="/auth/register" style="color: #8a2be2;">Sign Up</a></p>
     </div>
 </div>
 {% endblock %}
