--- a/templates/html/newoutfit.html
+++ b/templates/html/newoutfit.html
@@ -27,6 +27,77 @@
         }
     </style>
 </head>
+<div class="container px-4">
+    <div class="flex flex-nowrap">
+        <div class="w-1/4 min-h-screen bg-gray-100 p-4">
+            <div class="flex flex-col items-center drop-shadow  ">
+                <p class="text-2xl font-bold pb-3">StyleSync</p>
+                <hr class="w-full" />
+                <ul class="w-full">
+                  <li class="my-4">
+                    <div id="ww_2a86b77fb94b6" v="1.3" loc="auto" a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_whr":3,"el_phw":3}'>
+                      <a href="https://weatherwidget.org/" id="ww_2a86b77fb94b6_u" target="_blank">Weather widget</a>
+                    </div>
+                    <script async src="https://app2.weatherwidget.org/js/?id=ww_2a86b77fb94b6"></script>
+                  </li>
+                  <li class="w-full">
+                    <form action="/views/wardrobe/filter" method="post">
+                      <div class="w-full" id="filterAccordion">
+                        {% for category in categories %}
+                        <div class="mb-2 collapse collapse-plus">
+                          <input type="checkbox" name="{{category.name}}"/> 
+                          <div class="collapse-title text-xl font-medium">
+                          <button class="btn btn-outline w-full text-left " type="button" data-toggle="collapse-content" data-target="#collapse{{ category.name }}" aria-expanded="true" aria-controls="collapse{{ category.name }}">
+                            {{ category.name }}   
+                          </button>
+                          </div>
+                          <div id="collapse{{ category.name }}" class="collapse-content" data-parent="#filterAccordion">
+                            <div class="p-2">
+                              {% for filter in category.filters %}
+                              <div class="form-check">
+                                <input type="checkbox" name="{{filter.name}}"   class="checkbox border-orange-400 checked:border-indigo-800 [--chkbg:theme(colors.indigo.600)] [--chkfg:orange]" value="{{ filter.id }}" id="filter{{ filter.name }}" name="{{filter.name}}">
+                                <label class="form-check-label" for="filter{{ filter.name }}">
+                                  {{ filter.name }}
+                                </label>  
+                              </div>
+                              {% endfor %}
+                            </div>
+                          </div>
+                        </div>
+                        {% endfor %}
+                      </div>
+                      <button type="submit" class="btn btn-primary mt-2">Filter</button>
+                      <a href="{{url_for('html.wardrobe')}}" class="btn btn-secondary mt-2">Clear</a>
+                    </form>
+                  </li>
+                </ul>
+                <hr class="w-full" />
+              </div>
+        </div>  
+        <div class="container-fluid py-5">
+            <!-- Loop through the outfit items and show them based on type in columns -->
+            <div class="row">
+                <!-- Accessories Column -->
+                <p>dldl</p>
+                <p>{{item_dict}}</p>
+                {% if 'Accessories' in item_dict %}
+                <p>eejejj</p>
+                <div class="col mb-4 align-self-start">
+                    <h3 class="column-title">Accessories</h3>
+                    {% for item in item_dict['Accessories'] %}
+                    <div class="card" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom{{item.id}}" aria-controls="offcanvasBottom{{item.id}}">
+                        <img class="card-img-top object-fit-scale" alt="{{ item.name }}" src="{{ url_for('static', filename=item.image_url) }}">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ item.name }}</h5>
+                        </div>
+                    </div>  
+                        {% endfor %}
+                </div>
+                {%else%}
+                <p>eejejjfdjlfsefhsehfksehfshekh</p>
+                {%endif%}
+    </div>
+</div>
 <div class="container-fluid">
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
