--- a/templates/html/outfit.html
+++ b/templates/html/outfit.html
@@ -1,6 +1,8 @@
 {% extends '/html/base.html' %}
 {% block content %}
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         .col {
             max-width: 415px;
