--- a/static/output.css
+++ b/static/output.css
@@ -8522,9 +8522,19 @@ html:has(.drawer-open.drawer-open) {
   margin-right: 0.25rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .my-3 {
@@ -8535,6 +8545,11 @@ html:has(.drawer-open.drawer-open) {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .-ml-0 {
@@ -8718,6 +8733,10 @@ html:has(.drawer-open.drawer-open) {
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .w-24 {
@@ -9092,6 +9111,10 @@ html:has(.drawer-open.drawer-open) {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-5 {
@@ -9948,6 +9971,11 @@ html:has(.drawer-open.drawer-open) {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -10189,6 +10217,11 @@ html:has(.drawer-open.drawer-open) {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-slate-50 {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -10644,20 +10677,18 @@ html:has(.drawer-open.drawer-open) {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  @media (min-width: 1024px) {
-    @media (hover:hover) {
-      .table tr.dark\:lg\:hover:hover,
-  .table tr.dark\:lg\:hover:nth-child(even):hover {
-        --tw-bg-opacity: 1;
-        background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-      }
+@media (min-width: 1024px) {
+  @media (hover:hover) {
+    .table .dark\:lg\:hover:where(.dark, .dark *)tr:hover,
+  .table .dark\:lg\:hover:where(.dark, .dark *)tr:nth-child(even):hover {
+      --tw-bg-opacity: 1;
+      background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
+    }
 
-      .table-zebra tr.dark\:lg\:hover:hover,
-  .table-zebra tr.dark\:lg\:hover:nth-child(even):hover {
-        --tw-bg-opacity: 1;
-        background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
-      }
+    .table-zebra .dark\:lg\:hover:where(.dark, .dark *)tr:hover,
+  .table-zebra .dark\:lg\:hover:where(.dark, .dark *)tr:nth-child(even):hover {
+      --tw-bg-opacity: 1;
+      background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
     }
   }
 }
@@ -10707,15 +10738,27 @@ html:has(.drawer-open.drawer-open) {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .dark\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
+.dark\:w-full:where(.dark, .dark *) {
+  width: 100%;
+}
 
-  @media (min-width: 1024px) {
-    .dark\:lg\:hover\:\[paint-order\:markers\]:hover {
-      paint-order: markers;
-    }
+.dark\:bg-green-50:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-white:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dark\:text-slate-50:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .dark\:lg\:hover\:\[paint-order\:markers\]:hover:where(.dark, .dark *) {
+    paint-order: markers;
   }
 }
