--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -27,7 +27,7 @@
   </head>
   <body class="container-fluid" style="max-width: 100vw; overflow-x: hidden">
     <div class="navbar flex justify-between items-center py-4 px-6 mb-3 bg-[#8a2be2]">
-      <a class="navbar-brand text-white h-full  " href="{{url_for('html.home')}}"><div class="w-24 h-full"><img src="../../static/items/EST_2024.png" class="object-scale-down" alt="StyleSync Logo"></div></a>
+      <a class="navbar-brand text-white h-full  " href="{{url_for('html.home')}}"><div class="w-24 h-full"><img src="../../static/items/Screenshot_2024-05-26_at_4.31.08_PM.png" class="object-scale-down" alt="StyleSync Logo"></div></a>
       <div class="flex space-x-4 items-center">                                             
         <a class="nav-link text-white {% if request.endpoint == 'html.home' %} active{% else %} {% endif %}" href="{{url_for('html.home')}}">My Outfits</a>
         <a class="nav-link text-white {% if request.endpoint == 'html.newoutfit' %} active{% else %} {% endif %}" href="{{url_for('html.newoutfit')}}">New Outfit</a>
@@ -38,10 +38,10 @@
             <i class="fa-solid fa-user"></i>
           </button>
           <ul id="dropdownMenu" class="dropdown-content bg-white shadow rounded-box absolute right-0 hidden">
-            <li><a class="dropdown-item px-4 py-2" href="{{url_for('html.profile')}}"> <i class="bi bi-person"></i> My Profile</a></li>
+            <li><a class="dropdown-item px-4 py-2" href="{{url_for('html.profile')}}"> <i class="fa-solid fa-user"></i> My Profile</a></li>
             <li>
               {% if current_user.is_authenticated %}
-                <a class="dropdown-item px-4 py-2" href="{{url_for('authorization.logout')}}"> <i class="bi bi-box-arrow-right"></i> Logout</a>
+                <a class="dropdown-item px-4 py-2" href="{{url_for('authorization.logout')}}"> <i class="fas fa-sign-out-alt"></i> Logout</a>
               {% else %}
                 <a class="nav-link px-4 py-2" href="{{url_for('authorization.home')}}">Login</a>
                 <a class="nav-link px-4 py-2" href="{{url_for('authorization.register')}}">Register</a>
