--- a/templates/html/homepage.html
+++ b/templates/html/homepage.html
@@ -91,34 +91,31 @@
                         <script async src="https://app2.weatherwidget.org/js/?id=ww_2a86b77fb94b6"></script>
                     </li>
                     <li class="w-full">
-                        <form action="/views/wardrobe/filter" method="post">
+
                             <div class="w-full" id="filterAccordion">
-                                {% for category in categories %}
+  
                                 <div class="mb-2 collapse collapse-plus">
-                                    <input type="checkbox" name="{{category.name}}" />
+                                    <input type="checkbox" name="savedoutfits" />
                                     <div class="collapse-title text-xl font-medium">
-                                        <button class="btn btn-outline w-full text-left" type="button" data-toggle="collapse-content" data-target="#collapse{{ category.name }}" aria-expanded="true" aria-controls="collapse{{ category.name }}">
-                                            {{ category.name }}
+                                        <button class="btn btn-outline w-full text-left" type="button" data-toggle="collapse-content" data-target="#savedoutfits" aria-expanded="true" aria-controls="savedoutfits">
+                                            Saved Outfits
+
                                         </button>
                                     </div>
-                                    <div id="collapse{{ category.name }}" class="collapse-content" data-parent="#filterAccordion">
+                                    <div id="savedoutfits" class="collapse-content" data-parent="#filterAccordion">
                                         <div class="p-2">
-                                            {% for filter in category.filters %}
+                                            {% for outfit_ in alloutfits %}
                                             <div class="form-check">
-                                                <input type="checkbox" name="{{filter.name}}" class="checkbox border-orange-400 checked:border-indigo-800 [--chkbg:theme(colors.indigo.600)] [--chkfg:orange]" value="{{ filter.id }}" id="filter{{ filter.name }}">
-                                                <label class="form-check-label" for="filter{{ filter.name }}">
-                                                    {{ filter.name }}
-                                                </label>
+                                              <a href="{{ url_for('html.outfit', id=outfit_.id) }}" class="form-check-label" for="filter{{ outfit_.name }}">
+                                                {{ outfit_.name }}</a>
                                             </div>
                                             {% endfor %}
                                         </div>
                                     </div>
                                 </div>
-                                {% endfor %}
                             </div>
-                            <button type="submit" class="btn btn-primary mt-2">Filter</button>
-                            <a href="{{ url_for('html.wardrobe') }}" class="btn btn-secondary mt-2">Clear</a>
-                        </form>
+                            
+                      
                     </li>
                 </ul>
                 <hr class="w-full"/>
@@ -607,6 +604,13 @@
                   </div>
                 </div>
             </div>
+    </div>
+    <div class="flex justify-center">
+      <div class="join">
+        <a href=""><button class="join-item btn">«</button></a>
+        <button class="join-item btn">{{outfit.id}}</button>
+        <button class="join-item btn">»</button>
+      </div>
     </div>
 </div>
 
