--- a/templates/html/item.html
+++ b/templates/html/item.html
@@ -14,7 +14,8 @@
       <p class="text-gray-700">{{ item.description }}</p>
       <p class="text-lg font-semibold text-green-600">{{ item.price }}</p>
       <div class="card-actions">
-        <button class="btn btn-primary">Buy Now</button>
+        <a href="{{ url_for('html.delete_item', id=item.id) }}" class="btn btn-danger">Delete</a>
+        <a href="{{ url_for('html.wardrobe') }}" class="btn btn-primary">Back</a>
       </div>
     </div>
   </div>
